tests/fixtures/LatestTests/BinaryOperationLiteralTests/errors/integer_overflow_positive.fg
/; EXPECT_ERROR: NumberTooLargeForInt
print(922337203685477580822)

